# TeamTrack

./: .gitignore  evaluation_untrained_yolov8x.txt  model_classes.py  pyproject.toml  requirements.txt
custom_video_results/clip10_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
custom_video_results/clip11_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
custom_video_results/clip12_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
custom_video_results/clip4_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
custom_video_results/clip5_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
custom_video_results/clip6_results_(4. 5. 6, 7, 8, 9,10,11,12)_86epoch/results/: metrics.json
scripts/: check_duplicates.py  check_labels.py  check_mot_labels.py  convert_teamtrack_to_mot.py  debug_conversion.py  download_from_labelbox.py
scripts/benchmark/yolov8/: ball_train_config.yaml  convert_mot_to_yolo.py  (+2 more)
teamtrack/: utils.py
teamtrack/config/: defaults.py
yolov8/Handball_Sideview_trained/: args.yaml
yolov8/Handball_Sideview_trained2/: args.yaml  events.out.tfevents.1739796014.EF-MRP.10452.0
yolov8/Handball_Sideview_trained3/: args.yaml  events.out.tfevents.1739800916.EF-MRP.20096.0  results.csv
yolov8/Handball_Sideview_trained4/: args.yaml
yolov8/Handball_Sideview_trained5/: args.yaml
yolov8/Handball_Sideview_trained6/: args.yaml
yolov8/Handball_Sideview_trained7/: args.yaml
yolov8/Handball_Sideview_trained8/: args.yaml  events.out.tfevents.1739953242.EF-MRP.35312.0
(+12 files in other folders)
