[tool.poetry]
name = "teamtrack"
version = "0.1.0"
description = ""
authors = ["Atom Scott <atom.james.scott@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
ndjson = "^0.3.1"
numpy = ">=1.23.0,<=2.1.1"
ultralytics = "^8.3.74"
torch = "^2.6.0"
opencv-python = "^4.11.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
